# ltrans

./: README.md
src/: Makefile.am  Makefile.in  as_check.cpp  as_check.hpp  as_grammar.hpp  as_rep.cpp  as_rep.hpp  as_trans.cpp  as_trans.hpp  logic_grammar.hpp  ltrans.cpp  program_rep.cpp  program_rep.hpp  query_b.cpp  query_b.hpp  transform.cpp  transform.hpp
