bin_PROGRAMS = ltrans
ltrans_SOURCES = as_check.cpp as_rep.cpp as_trans.cpp ltrans.cpp program_rep \
	program_rep.cpp query_b.cpp transform.cpp

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
ltrans_LDFLAGS = $(all_libraries) 
noinst_HEADERS = as_check.hpp as_grammar.hpp as_rep.hpp as_trans.hpp \
	logic_grammar.hpp program_rep.hpp query_b.hpp transform.hpp
